mabger-meter/force-app/main/default/objects/Case/fields/Number_of_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Endpoints__c</fullName>
    <label>Number of Endpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>