mabger-meter/force-app/main/default/objects/Case/fields/Number_of_Endpoints_to_Drive__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Endpoints_to_Drive__c</fullName>
    <label>Number of Endpoints to Drive</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>