mabger-meter/force-app/main/default/objects/Case/fields/Number_Of_Services_Electric__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Services_Electric__c</fullName>
    <label>Number Of Services (Electric)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>