mabger-meter/force-app/main/default/objects/Case/fields/Number_of_Touches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Touches__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Touches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>