mabger-meter/force-app/main/default/objects/Case/fields/Number_Of_Trainees_Software__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Trainees_Software__c</fullName>
    <label>Number Of Trainees (Software)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>