mabger-meter/force-app/main/default/objects/Case/fields/Order_Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_Acknowledgement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Acknowledgement Sent</label>
    <type>Checkbox</type>
</CustomField>