mabger-meter/force-app/main/default/objects/Case/fields/Original_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Number__c</fullName>
    <label>Original Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>