mabger-meter/force-app/main/default/objects/Case/fields/Original_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Number__c</fullName>
    <label>Original Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>