mabger-meter/force-app/main/default/objects/Case/fields/Other_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Explanation__c</fullName>
    <label>Other Reason Explanation</label>
    <type>TextArea</type>
</CustomField>