mabger-meter/force-app/main/default/objects/Case/fields/Owned_by_a_User__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_a_User__c</fullName>
    <formula>Owner:User.IsActive =false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by an Inactive User</label>
    <type>Checkbox</type>
</CustomField>