mabger-meter/force-app/main/default/objects/Case/fields/Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Queue__c</fullName>
    <formula>IF(BEGINS(OwnerId, &quot;00G&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Queue</label>
    <type>Checkbox</type>
</CustomField>