mabger-meter/force-app/main/default/objects/Case/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Displays payment terms on the account</description>
    <formula>Text( Account.Payment_Terms_salesfacing__c)</formula>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>