mabger-meter/force-app/main/default/objects/Case/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula>Installs_To_Date__c  /  Total_Installations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>