mabger-meter/force-app/main/default/objects/Case/fields/PO_RGA_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_RGA_Number__c</fullName>
    <label>PO/RGA Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>