mabger-meter/force-app/main/default/objects/Case/fields/Potential_Dollar_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Dollar_Value__c</fullName>
    <description>Potential dollar value of open cases</description>
    <inlineHelpText>Enter the dollar value of the PO or new quote</inlineHelpText>
    <label>Potential Dollar Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>