mabger-meter/force-app/main/default/objects/Case/fields/Pre_populated_Form__c.field-meta.xml
<CustomField>
    <fullName>Pre_populated_Form__c</fullName>
    <label>Pre-populated Form</label>
    <type>Date</type>
</CustomField>