mabger-meter/force-app/main/default/objects/Case/fields/Prevents_billling__c.field-meta.xml
<CustomField>
    <fullName>Prevents_billling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevents billling</label>
    <type>Checkbox</type>
</CustomField>