mabger-meter/force-app/main/default/objects/Case/fields/Prevents_order_shipping__c.field-meta.xml
<CustomField>
    <fullName>Prevents_order_shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevents order shipping</label>
    <type>Checkbox</type>
</CustomField>