mabger-meter/force-app/main/default/objects/Case/fields/Primary_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>