mabger-meter/force-app/main/default/objects/Case/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Blancett</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Dynasonics</fullName>
            </value>
            <value>
                <fullName>Exact Flow</fullName>
            </value>
            <value>
                <fullName>Flo-Tech</fullName>
            </value>
            <value>
                <fullName>Hedland</fullName>
            </value>
            <value>
                <fullName>Impeller</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>John Deere Meter</fullName>
            </value>
            <value>
                <fullName>Mag</fullName>
            </value>
            <value>
                <fullName>Preso</fullName>
            </value>
            <value>
                <fullName>Racine</fullName>
            </value>
            <value>
                <fullName>Valve</fullName>
            </value>
            <value>
                <fullName>Wyco</fullName>
            </value>
            <value>
                <fullName>Wyco Concrete Meter</fullName>
            </value>
            <value>
                <fullName>Wyco Screed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>