mabger-meter/force-app/main/default/objects/Case/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>