mabger-meter/force-app/main/default/objects/Case/fields/Product_Industry__c.field-meta.xml
<CustomField>
    <fullName>Product_Industry__c</fullName>
    <description>The Product Industry field will drive the RMA and Analysis documents and emails</description>
    <inlineHelpText>To use Email RMA Form button, this field needs to be populated for the correct document to be selected.</inlineHelpText>
    <label>Product Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Industry</valueSetName>
    </valueSet>
</CustomField>