mabger-meter/force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>