mabger-meter/force-app/main/default/objects/Case/fields/Product_Line_Item_Created__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Item_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Line Item Created</label>
    <type>Checkbox</type>
</CustomField>