mabger-meter/force-app/main/default/objects/Case/fields/Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Location__c</fullName>
    <description>Field to enter the inventory location of the returned product</description>
    <label>Product Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>