mabger-meter/force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>