mabger-meter/force-app/main/default/objects/Case/fields/Project_phase__c.field-meta.xml
<CustomField>
    <fullName>Project_phase__c</fullName>
    <label>Project phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Monitor/Control</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Initiation</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>