mabger-meter/force-app/main/default/objects/Case/fields/Project_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Project_Schedule__c</fullName>
    <label>Project Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3+ months behind</fullName>
            </value>
            <value>
                <fullName>1-3 months behind</fullName>
            </value>
            <value>
                <fullName>On schedule</fullName>
            </value>
            <value>
                <fullName>1-3 months ahead</fullName>
            </value>
            <value>
                <fullName>3+ months ahead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>