mabger-meter/force-app/main/default/objects/Case/fields/Project_schedule_delay__c.field-meta.xml
<CustomField>
    <fullName>Project_schedule_delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project schedule delay</label>
    <type>Checkbox</type>
</CustomField>