mabger-meter/force-app/main/default/objects/Case/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <inlineHelpText>This field is used to capture the newly created proposal towards resolution of the case</inlineHelpText>
    <label>Proposal Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>