mabger-meter/force-app/main/default/objects/Case/fields/QCBD_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>QCBD_Case_Number__c</fullName>
    <label>QCBD Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>