mabger-meter/force-app/main/default/objects/Case/fields/Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Status__c</fullName>
    <formula>IF(Shipment_Received__c = TRUE &amp;&amp; NOT(ISBLANK(PO_Number__c)), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK to Begin Work&quot;, 20, 20), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Do Not Begin Work&quot;, 20, 20) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether or not the Quality Control Analysts or Leads are able to work on a case: A green flag means that there is a PO Number and the Shipment has been received. A Red flag means that there is no PO Number or the Shipment has not been received.</inlineHelpText>
    <label>Quality Status</label>
    <type>Text</type>
</CustomField>