mabger-meter/force-app/main/default/objects/Case/fields/Qualtrics_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualtrics Survey Sent</label>
    <type>Checkbox</type>
</CustomField>