mabger-meter/force-app/main/default/objects/Case/fields/Quantity_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Products__c</fullName>
    <description>Rollup Summary totals the Quantity field on the Product Line</description>
    <inlineHelpText>Sum of Quantity on all product lines</inlineHelpText>
    <label>Quantity of Products</label>
    <summarizedField>Product_Line__c.Quantity__c</summarizedField>
    <summaryForeignKey>Product_Line__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>