mabger-meter/force-app/main/default/objects/Case/fields/Quote_or_Order_Record__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Order_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link this case to the quote or order record that was created as a result of the case.</inlineHelpText>
    <label>Quote or Order Record</label>
    <referenceTo>BigMachines__Quote__c</referenceTo>
    <relationshipLabel>Originating Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>