mabger-meter/force-app/main/default/objects/Case/fields/Read_Dates__c.field-meta.xml
<CustomField>
    <fullName>Read_Dates__c</fullName>
    <label>Read Dates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
                <default>true</default>
                <label>1st</label>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
            <value>
                <fullName>9th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
            <value>
                <fullName>13th</fullName>
            </value>
            <value>
                <fullName>14th</fullName>
            </value>
            <value>
                <fullName>15th</fullName>
            </value>
            <value>
                <fullName>16th</fullName>
            </value>
            <value>
                <fullName>17th</fullName>
            </value>
            <value>
                <fullName>18th</fullName>
            </value>
            <value>
                <fullName>19th</fullName>
            </value>
            <value>
                <fullName>20th</fullName>
            </value>
            <value>
                <fullName>21st</fullName>
            </value>
            <value>
                <fullName>22nd</fullName>
            </value>
            <value>
                <fullName>23rd</fullName>
            </value>
            <value>
                <fullName>24th</fullName>
            </value>
            <value>
                <fullName>25th</fullName>
            </value>
            <value>
                <fullName>26th</fullName>
            </value>
            <value>
                <fullName>27th</fullName>
            </value>
            <value>
                <fullName>28th</fullName>
            </value>
            <value>
                <fullName>29th</fullName>
            </value>
            <value>
                <fullName>30th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>