mabger-meter/force-app/main/default/objects/Case/fields/Reading_Device__c.field-meta.xml
<CustomField>
    <fullName>Reading_Device__c</fullName>
    <label>Reading Device</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handheld</fullName>
            </value>
            <value>
                <fullName>Laptop-Badger Supplied</fullName>
            </value>
            <value>
                <fullName>Laptop-Customer Supplied</fullName>
            </value>
            <value>
                <fullName>Mobile Reading</fullName>
            </value>
            <value>
                <fullName>Tablet-Badger Supplied</fullName>
            </value>
            <value>
                <fullName>Tablet-Customer Supplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>