mabger-meter/force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Return_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5-Point</fullName>
            </value>
            <value>
                <fullName>10-Point</fullName>
            </value>
            <value>
                <fullName>20-Point</fullName>
            </value>
            <value>
                <fullName>Clean &amp; Test</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Fee Based</fullName>
            </value>
            <value>
                <fullName>Field Scrap</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>NIST</fullName>
            </value>
            <value>
                <fullName>Repair &amp; Test</fullName>
            </value>
            <value>
                <fullName>Reprogram</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
            <value>
                <fullName>Review - Verify</fullName>
                <default>true</default>
                <label>Review - Verify</label>
            </value>
            <value>
                <fullName>Software - Firmware</fullName>
            </value>
            <value>
                <fullName>Used Meter</fullName>
            </value>
            <value>
                <fullName>NVLAP Calibration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>