mabger-meter/force-app/main/default/objects/Case/fields/Recalled_Date__c.field-meta.xml
<CustomField>
    <fullName>Recalled_Date__c</fullName>
    <label>Recalled Date</label>
    <type>DateTime</type>
</CustomField>