mabger-meter/force-app/main/default/objects/Case/fields/Recommended_Credit_Memo_Code__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Credit_Memo_Code__c</fullName>
    <label>Recommended Credit Memo Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>