mabger-meter/force-app/main/default/objects/Case/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases9</relationshipName>
    <type>Lookup</type>
</CustomField>