mabger-meter/force-app/main/default/objects/Case/fields/Register_Type__c.field-meta.xml
<CustomField>
    <fullName>Register_Type__c</fullName>
    <label>Register Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>ADE</fullName>
            </value>
            <value>
                <fullName>HRE</fullName>
            </value>
            <value>
                <fullName>HRE-LCD</fullName>
            </value>
            <value>
                <fullName>HRE-LCD 4:20mA</fullName>
            </value>
            <value>
                <fullName>E-Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>