mabger-meter/force-app/main/default/objects/Case/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>