mabger-meter/force-app/main/default/objects/Case/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <inlineHelpText>What steps were taken to resolve this case?</inlineHelpText>
    <label>Resolution Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>