mabger-meter/force-app/main/default/objects/Case/fields/Resolution_Comments_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments_Truncated__c</fullName>
    <description>This shows the first 255 characters of the Resolution Comments field for reporting. Populated by WFR.</description>
    <inlineHelpText>This shows the first 255 characters of the Resolution Comments field for reporting.</inlineHelpText>
    <label>Resolution Comments (Truncated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>