mabger-meter/force-app/main/default/objects/Case/fields/Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Response_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Received</label>
    <type>Checkbox</type>
</CustomField>