mabger-meter/force-app/main/default/objects/Case/fields/Return_Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Return_Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked -When An automated email is sent to the owner of the Case after 30 days from the status being changed to Awaiting Customer for Return Type Cases (Return Type = Calibration, Credit, Repair, Accuracy Testing, Review for claim)</description>
    <label>Return Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>