mabger-meter/force-app/main/default/objects/Case/fields/Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_Location__c</fullName>
    <inlineHelpText>This field determines what address is displayed on the customer&apos;s RMA form as the address of where they ship product for return, repair, or warranty analysis.</inlineHelpText>
    <label>Selected Return Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milwaukee</fullName>
            </value>
            <value>
                <fullName>Racine</fullName>
            </value>
            <value>
                <fullName>Collegeville</fullName>
            </value>
            <value>
                <fullName>Neuffen</fullName>
            </value>
            <value>
                <fullName>Tulsa</fullName>
            </value>
            <value>
                <fullName>BMUK</fullName>
            </value>
            <value>
                <fullName>Henderson</fullName>
            </value>
            <value>
                <fullName>D1 - Centennial</fullName>
            </value>
            <value>
                <fullName>D2 - Sacramento</fullName>
            </value>
            <value>
                <fullName>D5 - Nashville</fullName>
            </value>
            <value>
                <fullName>Metercor</fullName>
            </value>
            <value>
                <fullName>Nogales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>