mabger-meter/force-app/main/default/objects/Case/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <inlineHelpText>When a Return type case is selected, this field is required to identify the type of Return being performed.</inlineHelpText>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calibration</fullName>
                <default>true</default>
                <label>Calibration</label>
            </value>
            <value>
                <fullName>Calibration - Before and After</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
                <label>Warranty Review</label>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Accuracy Testing</fullName>
            </value>
            <value>
                <fullName>Exchange/Upgrade</fullName>
            </value>
            <value>
                <fullName>Return from Shipper</fullName>
            </value>
            <value>
                <fullName>Cellular Upgrade Mktg Prg</fullName>
            </value>
            <value>
                <fullName>Loaner/Demo</fullName>
            </value>
            <value>
                <fullName>Scrap - Disposal</fullName>
            </value>
            <value>
                <fullName>Customer Supplied Material</fullName>
            </value>
            <value>
                <fullName>Review for Claim</fullName>
            </value>
            <value>
                <fullName>ADV REPL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>