mabger-meter/force-app/main/default/objects/Case/fields/ReturnLocationFormula__c.field-meta.xml
<CustomField>
    <fullName>ReturnLocationFormula__c</fullName>
    <formula>IF(Use_Suggested_Return__c = TRUE,
CASE(Suggested_Return_Location__c , 

&quot;Milwaukee&quot;, 
&quot;Badger Meter Inc.&quot; + BR() + &quot;4545 W. Brown Deer Road&quot; + BR() + &quot;Milwaukee WI 53223&quot;  + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;, 

&quot;Racine&quot;, 
&quot;Badger Meter Inc.&quot; + BR() + &quot;8635 Washington Ave&quot; + BR() + &quot;Racine WI 53406&quot; + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;, 

&quot;Tulsa&quot;, 
&quot;Badger Meter Inc.&quot; + BR() + &quot;6116 East 15th Street&quot; + BR() + &quot;Tulsa OK 74112&quot; + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;, 

&quot;Collegeville&quot;,
&quot;Badger Meter Inc.&quot; + BR() + &quot;6 Iron Bridge Drive&quot; + BR() + &quot;Collegeville, PA 19426&quot; + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;,

&quot;BMUK&quot;,
&quot;Badger Meter UK Ltd.&quot; + BR() + &quot;Unit 1 &amp; 2 Gatehead Business Park&quot; + BR() + &quot;Delph New Road&quot;+ BR() + &quot;Delph&quot;+ BR() + &quot;Saddleworth, England OL3 5DE&quot; + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;,

&quot;Henderson&quot;,
&quot;Syrinix&quot; + BR() + &quot;931 American Pacific Drive Suite 108&quot; + BR() + &quot;Henderson, NV 89014&quot; + BR() + &quot;Attn: &quot; + TEXT(Product_Type__c) + &quot; Returns&quot;,

&quot;Product Selection Error; Location Not Available.&quot;), 

Hidden_Return_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays where the customer should send product(s) to be returned. This field also appears on the RMA as the Badger Meter Return To address.</inlineHelpText>
    <label>Return Location</label>
    <type>Text</type>
</CustomField>