mabger-meter/force-app/main/default/objects/Case/fields/Review_in_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Review_in_6_Months__c</fullName>
    <label>Review in 6 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>