mabger-meter/force-app/main/default/objects/Case/fields/RMA_Analysis_Sent_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>RMA_Analysis_Sent_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMA Analysis Sent to Contact</label>
    <type>Checkbox</type>
</CustomField>