mabger-meter/force-app/main/default/objects/Case/fields/Scheduled_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Drive_Date__c</fullName>
    <label>Scheduled Drive Date</label>
    <type>Date</type>
</CustomField>