mabger-meter/force-app/main/default/objects/Case/fields/Service_Unit_s__c.field-meta.xml
<CustomField>
    <fullName>Service_Unit_s__c</fullName>
    <inlineHelpText>This value is for Service Unit $’s post deployment.</inlineHelpText>
    <label>Service Unit $&apos;s</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>