mabger-meter/force-app/main/default/objects/Case/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To #</label>
    <length>4</length>
    <type>Text</type>
</CustomField>