mabger-meter/force-app/main/default/objects/Case/fields/Shipment_Received__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Received?</label>
    <type>Checkbox</type>
</CustomField>