mabger-meter/force-app/main/default/objects/Case/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>