mabger-meter/force-app/main/default/objects/Case/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>Ship To State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>